--- a/durga_cables/templates/pendingCustomers.html
+++ b/durga_cables/templates/pendingCustomers.html
@@ -23,10 +23,14 @@
 				<div class="address">
 					Address
 				</div>
+				<div class="amount">
+					Amount
+				</div>
 			</div>
 			<a data-ng-href="{[{::'/customer/' + customer.cid}]}" class="ct-row" data-ng-repeat="customer in customers">
 				<div class="name" data-ng-bind="::customer.name"></div>
 				<div class="address" data-ng-bind="::customer.address"></div>
+				<div class="amount" data-ng-bind="::customer.pending_amount"></div>
 			</a>
 		</div>
 
