Added pagination in pending payments page

--- a/durga_cables/templates/pendingCustomers.html
+++ b/durga_cables/templates/pendingCustomers.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<section class="hm-sc" data-ng-controller="homeCtrl">
+<section class="hm-sc" data-ng-controller="pendingCtrl">
 	<div class="js-hm-data">{{ customer_data }}</div>
 	<div class="hm-c">
 
