--- a/durga_cables/static/less/home.less
+++ b/durga_cables/static/less/home.less
@@ -70,13 +70,22 @@
 				text-decoration: none;
 			}
 		}
+		.btn-view {
+			margin-right: 0;
+		}
 
 		.vp-block {
 			// display: none;
 			background: #f2f2f2;
 			width: 400px;
-			margin: 20px auto;
+			margin: 0 auto 20px auto;
 			padding: 20px;
+			.vp-title {
+				text-transform: uppercase;
+				font-weight: bold;
+				font-size: 14px;
+				letter-spacing: 2px;
+			}
 			input {
 				width: 70%;
 				display: inline-block;
@@ -102,7 +111,7 @@
 			}
 			input {
 				margin: 10px 0;
-				width: 70%;
+				width: 65%;
 				display: inline-block;
 			}
 			.search-btn {
@@ -112,6 +121,11 @@
 				margin-top: -2px;
 			}
 		}
+		.bottom-row {
+			text-align: center;
+			margin-bottom: 30px;
+		}
+
 	}
 }
 
